スプシのバグ回避、毎日投稿に変更

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -69,6 +69,8 @@ Metrics/CyclomaticComplexity:
 # Configuration parameters: CountComments, CountAsOne, AllowedMethods, AllowedPatterns.
 Metrics/MethodLength:
   Max: 18
+  Exclude:
+    - 'app/services/gmail_service.rb'
 
 # Offense count: 1
 # Configuration parameters: AllowedMethods, AllowedPatterns.
