Add: Post on Custom holiday.

--- a/config/sidekiq_scheduler.yml
+++ b/config/sidekiq_scheduler.yml
@@ -8,15 +8,15 @@ post_daily:
   class: "PostJob"
   queue: default
 
-#post_weekend:
-#  cron: "0 3 * * 6,0"  # UTC 3:00 土(6),日(0) = JST 12:00 土, 日
-#  class: "PostJob"
-#  queue: default
+post_weekend:
+  cron: "0 3 * * 6,0"  # UTC 3:00 土(6),日(0) = JST 12:00 土, 日
+  class: "PostJob"
+  queue: default
 
-#post_holiday:
-#  cron: "0 3 * * *"  # UTC 3:00 = JST 12:00
-#  class: "PostHolidayJob"
-#  queue: default
+post_national_holiday:
+  cron: "0 3 * * *"  # UTC 3:00 = JST 12:00 祝日（土日を除く）
+  class: "PostNationalHolidayJob"
+  queue: default
 
 #send_gmail:
 #  cron: "0 10 * * 5"  # UTC 10:00 金(5) = JST 19:00 金
