--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -49,6 +49,8 @@ Metrics/AbcSize:
   Max: 21
   Exclude:
     - 'app/jobs/record_post_in_sheets_job.rb'
+    - 'app/jobs/send_gmail_job.rb'
+    - 'app/services/gmail_service.rb'
     - 'app/services/google_sheets_service.rb'
     - 'lib/user_debug_helper.rb'
 
@@ -72,6 +74,7 @@ Metrics/CyclomaticComplexity:
 Metrics/MethodLength:
   Max: 20
   Exclude:
+    - 'app/jobs/send_gmail_job.rb'
     - 'app/services/gmail_service.rb'
 
 # Offense count: 1
