GMAIL_TOKEN 再設定 成功

--- a/config/sidekiq_scheduler.yml
+++ b/config/sidekiq_scheduler.yml
@@ -14,7 +14,7 @@ post_weekend:
   queue: default
 
 send_gmail:
-  cron: "*/5 * * * *"  # 本番環境 動作確認
+  cron: "0 22 * * *"  # 本番環境 動作確認
   # cron: "0 22 * * 5"  # UTC 22:00 金(5) = JST 7:00 土
   class: "SendGmailJob"
   queue: default
