Switch from sidekiq_scheduler.yml to shell script.

--- a/config/sidekiq_scheduler.yml
+++ b/config/sidekiq_scheduler.yml
@@ -1,20 +1,20 @@
-fetch_articles:
-  cron: "5 10 * * 0,4"  # UTC 20:00 日(0),木(4) = JST 5:00 月, 金
-  class: "FetchArticlesJob"
-  queue: default
+# fetch_articles:
+#   cron: "5 10 * * 0,4"  # UTC 20:00 日(0),木(4) = JST 5:00 月, 金
+#   class: "FetchArticlesJob"
+#   queue: default
 
-post_daily:
-  cron: "5 10 * * *"  # UTC 10:00 = JST 19:00
-  class: "PostToXJob"
-  queue: default
+# post_daily:
+#   cron: "5 10 * * *"  # UTC 10:00 = JST 19:00
+#   class: "PostToXJob"
+#   queue: default
 
-post_weekend:
-  # cron: "0 3 * * 6,0"  # UTC 3:00 土(6),日(0) = JST 12:00 土, 日
-  class: "PostToXJob"
-  queue: default
+# post_weekend:
+#   # cron: "0 3 * * 6,0"  # UTC 3:00 土(6),日(0) = JST 12:00 土, 日
+#   class: "PostToXJob"
+#   queue: default
 
-send_gmail:
-  # cron: "0 */1 * * *"  # 本番環境 動作確認 → Google::Apis::AuthorizationError SendGmailJob@default Unauthorized を確認
-  # cron: "0 22 * * 5"  # UTC 22:00 金(5) = JST 7:00 土
-  class: "SendGmailJob"
-  queue: default
+# send_gmail:
+#   # cron: "0 */1 * * *"  # 本番環境 動作確認 → Google::Apis::AuthorizationError SendGmailJob@default Unauthorized を確認
+#   # cron: "0 22 * * 5"  # UTC 22:00 金(5) = JST 7:00 土
+#   class: "SendGmailJob"
+#   queue: default
